# backoffice

./: .dockerignore  .env  .env.example  .gitignore  Cargo.toml  Dockerfile  Justfile  README.md  build.rs  cspell.json  docker-compose.yaml  package-lock.json  package.json  pgadmin-servers.json  roadmap.md  test.tst
.github/workflows/: docker-image.yml
.husky/: pre-commit
.sqlx/: query-07f6c7964b409b37ec2426044f1194e18d0d43c522526fd2c82da4557d6b5050.json  query-15abe25a8ab7b88398c2a283e0d82b53e8a7e312f1edec2f759d1bd42737e276.json  query-2f8af0d68293a288a42ec949cdb246630b42718e5f1441d9169b2851db3b079a.json  query-479e4c9c7a8b04ae98e48511561d34ddda600a4e1c52b0b7a83dd47e32232c73.json  query-54ab5cd68c4eb1d5c7a90dae89e24e8cce2f90d3834d8ca64dfc7f0f530dc566.json  query-5d299966eef57aa180ad57acdeb64ec97fea64144d7bc7c93c65b98c819df36c.json  query-7bbf09ebd830089aaf5eccd7daab3a527e69674b65150628fc029fd63ea6636f.json  query-8dfeec917fcd16892f7d1b017a650591bc659cf8a1c81b312ba2f05050579113.json  query-90b6ff81e53f3f6e8c3d2c430255e96585cf57407a83bb7008185350d9a4b466.json  query-aa67e24b6c2653c465832dc7d81fbb374ad15c1a149568f5914570cdf00e0e51.json  query-b98d3112e3ba00565ad66fd00f34e0854200e1580a56723e4a8067e8e7dcc43f.json  query-f14b3ddf41a5032ff35d14996a4f27a5f6715422c029e9e5dd03cfd8106a7992.json  query-f731a303ae9dc4dea7ec21ff5d6ea50316929a158411fe66f6f32e7411977184.json
backoffice/: .gitignore  Cargo.toml
backoffice-cli/: Cargo.toml
backoffice-web/: DESIGN.md
backoffice-web/app/components/: AppLogo.vue  PageLoader.vue
backoffice-web/app/layouts/: security.vue
backoffice/bindings/: Country.ts  Email.ts  Marketplace.ts  PrivilegedUser.ts  Product.ts  Resource.ts  User.ts  UserRole.ts
backoffice/crates/backoffice_email_client/: Cargo.toml
backoffice/crates/backoffice_email_client/src/: password_reset.rs  zepto_mailer.rs
backoffice/crates/backoffice_email_client/templates/: auto_respond.html  invitation_accepted.html  password_reset.html
backoffice/crates/backoffice_utils/: Cargo.toml
backoffice/migration/: Cargo.toml
backoffice/migration/src/: lib.rs  m20251109_214041_create_user_roles_table.rs  m20251116_020338_rename_marketplace.rs  m20251118_164259_create_products_table.rs  m20260328_100000_create_uploads_table.rs  m20260328_100001_create_emails_table.rs  m20260329_000000_add_pk_to_activities.rs  m20260330_012735_xreate_admin_table.rs
backoffice/scripts/: format  ui.just
backoffice/src/: app.rs  lib.rs
backoffice/src/api/: mod.rs  state.rs
backoffice/src/cli/: parser.rs
backoffice/src/config/: app_config.rs  logger.rs  mod.rs
backoffice/src/controllers/: countries.rs  root.rs  user.rs
backoffice/src/domain/: mod.rs
backoffice/src/entities/: activities.rs  app_config.rs  backoffice_server_migrations.rs  mod.rs  prelude.rs
backoffice/src/errors/: app_error.rs  auth_service_error.rs  authentication_error.rs  database_error.rs  filesystem_error.rs  mod.rs  service_error.rs
bindings/: App.ts  MarketplaceWithProducts.ts  Product.ts  ProductWithCurrency.ts  index.ts  sandbox.ts  tsconfig.json
crates/backoffice_access_control/: Cargo.toml
crates/backoffice_imagekit/: Cargo.toml
crates/backoffice_imagekit/src/: client.rs  error.rs  lib.rs
crates/backoffice_utils/: Cargo.toml
docker/dev/: Dockerfile
docker/prod/: Dockerfile
docs/: index.md  package-lock.json  package.json
docs/.vitepress/: config.mts
frontend/: nuxt.config.ts  package-lock.json  package.json  tsconfig.json
frontend/app/: app.config.ts
graphql/: health_check.gql  newsletter.gql
migration/src/: lib.rs  m20250508_133912_create_users_table.rs  m20251109_214342_add_role_to_users.rs  m20251115_183510_create_marketplace_table.rs  m20251117_222503_create_config_table.rs  m20251118_164849_create_activities_table.rs  m20251121_234155_create_countries_table.rs  m20251125_134721_add_currency_to_product.rs  m20260328_073612_create_teams_table.rs  m20260330_013623_create_newsletter_table.rs
migrations/: 20250508133912_create-user-table.sql  20251117222503_create_config_table.sql  20251118164259_create_product_table.sql  20251118164849_create_table_activities.sql  20251125134721_add_currency_to_product.sql
scripts/: .gitignore  bindings.js  countries.js  format  package.json  server.just
src/: lib.rs  main.rs
src/cli/: app.rs  errors.rs  logging.rs  mod.rs  parser.rs
src/config/: app.rs  app_config.rs  database.rs  filesystem.rs  logger.rs  mod.rs
src/controllers/: auth.rs  countries.rs  marketplace.rs  marketplaces.rs  mod.rs  products.rs  teams.rs  user.rs
src/entities/: admin_users.rs  app.rs  collection.rs  countries.rs  country.rs  emails.rs  marketplace.rs  mod.rs  prelude.rs  privileged_user.rs  products.rs  resource.rs  teams.rs  user.rs  user_role.rs  user_roles.rs  users.rs  weangel_server_migrations.rs
src/errors/: app_error.rs  auth_service_error.rs  authentication_error.rs  database_error.rs  filesystem_error.rs  macro_error.rs  mod.rs  repository_error.rs  service_error.rs
src/fs/: filesystem.rs  mod.rs
src/macros/: generate_sql.rs  mod.rs
src/middlewares/: validator.rs
src/mutations/: mod.rs  newsletter.rs
src/repositories/: base.rs  country_repository.rs  email_repository.rs  marketplace_repository.rs  mod.rs  product_repository.rs  resource_repository.rs  user_repository.rs
src/routes/: country.rs  marketplace.rs  mod.rs  products.rs  router.rs
src/scripts/: mod.rs  super_admin.rs
src/services/: admin_service.rs  auth_service.rs  country_service.rs  marketplace_service.rs  mod.rs  product_service.rs  team_service.rs  user_service.rs
src/states/: mod.rs  services_state.rs
src/utils/: error.rs
tests/: health_check_test.rs
ui/: DESIGN.md  nuxt.config.ts  package-lock.json  package.json
ui/app/: app.vue
website/: nuxt.config.ts  package-lock.json  package.json
website/app/: app.vue
website/content/: announcing-backoffice.md
(+214 files in other folders)
