[package]
name = "backoffice"
version = "0.1.0"
edition = "2024"

[lib]
name = "backoffice_lib"
path = "src/lib.rs"

[dependencies]
axum = { version = "0.8.3", features = ["tracing"] }
axum-extra = { version = "0.12.1", features = ["typed-header"] }
bcrypt = "0.17.0"
chrono = { version = "0.4.41", features = ["serde"] }
jsonwebtoken = { version = "10.1.0", features = ["rust_crypto"] }
log = "0.4.27"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0.140", features = ["raw_value"] }
sqlx = { version = "0.8", features = ["runtime-tokio",  "postgres", "macros", "migrate"] }
thiserror = "2.0.12"
tokio = { version = "1.44.2", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
ulid = { version = "1.2.1", features = ["serde"] }
validator = { version = "0.20.0", features = ["derive"] }

[dev-dependencies]
axum = { version = "0.8.3", features = ["macros"] }
axum-test = "18.2.1"
