[package]
name = "backoffice"
version = "0.1.0"
edition = "2024"

[workspace]
members = ["crates/*"]

[workspace.dependencies]
serde = { version = "1.0.219" }
serde_json = { version = "1.0.140" }
thiserror = "2.0.12"

[lib]
name = "backoffice_lib"
path = "src/lib.rs"

[dependencies]
axum = { version = "0.8.3", features = ["tracing"] }
axum-extra = { version = "0.12.1", features = ["typed-header"] }
axum_typed_multipart = { version = "0.16.3", features = ["tempfile_3"] }
backoffice_imagekit = { version = "0.1.0", path = "crates/backoffice_imagekit" }
backoffice_utils = { version = "0.1.0", path = "crates/backoffice_utils" }
bcrypt = "0.17.0"
chrono = { version = "0.4.41", features = ["serde"] }
dotenv = "0.15.0"
jsonwebtoken = { version = "10.1.0", features = ["rust_crypto"] }
log = "0.4.27"
sea-orm = { version = "2.0.0-rc", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros", "debug-print"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true, features = ["raw_value"] }
sqlx = { version = "0.8", features = ["runtime-tokio",  "postgres", "macros", "migrate"] }
thiserror.workspace = true
tokio = { version = "1.44.2", features = ["full", "macros"] }
tower = { version = "0.5.2", features = ["limit", "timeout"] }
tower-http = { version = "0.6.6", features = ["limit", "fs", "trace", "cors", "timeout", "sensitive-headers"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
ts-rs = "11.1.0"
ulid = { version = "1.2.1", features = ["serde"] }
validator = { version = "0.20.0", features = ["derive"] }

[build-dependencies]
fs_extra = "1.3.0"

[dev-dependencies]
axum = { version = "0.8.3", features = ["macros"] }
axum-test = "18.2.1"
