[package]
name = "backoffice_imagekit"
edition.workspace = true 
authors.workspace = true
description.workspace = true
version.workspace = true

[dependencies]
base64 = "0.22.1"
chrono = "0.4.41"
log = "0.4.27"
reqwest = { workspace = true, features = ["multipart", "json"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true

thiserror.workspace = true
