[package]
name = "backoffice_email_client"
edition = "2024"
authors.workspace = true
description.workspace = true
version.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
askama.workspace = true
reqwest = { version = "0.13.2", features = ["json"] }
serde = { workspace = true, features = ["derive"] }
thiserror.workspace = true
tokio = { version = "1.50.0", features = ["full"] }

[dev-dependencies]
tokio = { version = "1.50.0", features = ["full"] }
